--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
-    "test:watch": "yarn test --watch",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,6 +37,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "jest": "^26.6.3"
+    "enzyme-adapter-react-16": "^1.15.5",
+    "react-test-renderer": "^17.0.1"
   }
 }
